# open_midas

./: '  .gitignore  Cargo.toml
src/: best_price_trader.rs  bookkeeper.rs  deleter.rs  lib.rs  limit_master.rs  merchant_manager.rs  reseller.rs  reseller_saver.rs
src/calculators/: amount_calculator.rs  mod.rs  price_calculator.rs  profit_calculator.rs
src/filters/: mod.rs
tests/: limit_master.rs  reseller.rs
