[package]
name = "open_midas"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agnostic = { git="https://github.com/sonicxconst1/agnostic.git", branch="master" }
log = { version="0.*" }
serde = { version = "1.*", features = ["derive"]}
serde_json = { version = "1.*" }
