[package]
name = "open_midas"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agnostic = { git="https://github.com/sonicxconst1/agnostic.git", branch="master" }
time = { version = "*" }
log = { version= "*" }
serde = { version = "*", features = ["derive"]}
serde_json = { version = "*" }
futures = { version = "*" }

[dev-dependencies]
agnostic_test = { git="https://github.com/sonicxconst1/agnostic_test.git", branch="main" }
tokio = { version = "*",  features = ["rt", "macros"]}
tokio-test = { version = "*"}
